# dreamdeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  chainlit.md  cli.py  config.yaml  conftest.py** (Create this file if it doesn't exist)  docker-compose.yaml  plan.md  plan.txt  pyproject.toml  resources.md  resources.txt  state.py  testing.md
.chainlit/: config.toml
.github/workflows/: ci.yml
archive/: oracle_workflow.py  tools_and_agents.py
archive/old_tests/: test_persona_system.py  test_workflows.py
src/: __init__.py  app.py  cli.py  commands.py  config.py  data_layer.py  event_handlers.py  image_generation.py  initialization.py  memory_management.py  models.py  oracle_workflow.py  persona_workflows.py  state.py  state_graph.py  storage.py  stores.py  supervisor.py  tools_and_agents.py  workflows.py
src/agents/: __init__.py  character_agent.py  decision_agent.py  dice_agent.py  director_agent.py  knowledge_agent.py  lore_agent.py  oracle_agent.py  orchestrator_agent.py  persona_classifier_agent.py  puzzle_agent.py  registry.py  report_agent.py  storyboard_editor_agent.py  todo_agent.py  web_search_agent.py  writer_agent.py
src/prompts/: ai_writer_prompt.j2  ai_writer_prompt_storyteller.j2  coder_writer_prompt.j2  daily_report_prompt.j2  decision_prompt.j2  dice_processing_prompt.j2  director_prompt.j2  dungeon_master_writer_prompt.j2  friend_writer_prompt.j2  lore_knowledge_prompt.j2  lore_prompt.j2  oracle_decision_prompt.j2  orchestrator_prompt.j2  persona_classifier_prompt.j2  secretary_todo_prompt.j2  secretary_writer_prompt.j2  storyboard_generation_prompt.j2  therapist_writer_prompt.j2  (+2 more)
tests/: README.md  conftest.py  test_agents_misc.py  test_commands.py  test_config_validation.py  test_director_agent.py  test_event_handlers.py  test_image_generation.py  test_initialization.py  test_knowledge_loading.py  test_models.py  test_orchestrator_agent.py  test_persona_prompts.py  test_persona_system.py  test_persona_workflow.py  test_todo_agent.py  test_tools_and_agents.py  test_vector_store.py  test_workflows.py
(+25 files in other folders)
