[tool.poetry]
name = "dreamdeck"
version = "0.1.0"
description = "AI Storytelling done right"
authors = ["Danny Key <danny@dannydabbles.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "dreamdeck", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.3"
chromadb = "^0.4.24"
langchain-community = "^0.3.12"
pydantic = "^2.10.1"
langchain-core = "^0.3.25"
aiohttp = "^3.11.10"
sqlalchemy = "^2.0.36"
langchain-openai = "^0.2.12"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.1.4"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
azure-storage-blob = "^12.24.0"
boto3 = "^1.35.99"
chainlit = "^2.4.400"
black = "^25.1.0"
flake8 = "^7.1.2"
langgraph = "^0.3.2"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
tzdata = "^2025.2"
langgraph-supervisor = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"  # Use a recent version
pytest-cov = "^5.0.0" # For coverage reporting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

